--- a/app/scss/pages/_download.scss
+++ b/app/scss/pages/_download.scss
@@ -7,5 +7,10 @@
 
     .btn {
         padding: 2em;
+        transition: opacity 0.3s;
+
+        &:hover {
+            opacity: 0.7;
+        }
     }
 }
